; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_render_parents.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_render_parents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph = type { %struct.graph_v2* }
%struct.graph_v2 = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.graph_canvas = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.graph*, %struct.graph_canvas*)* @graph_render_parents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @graph_render_parents(%struct.graph* %0, %struct.graph_canvas* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.graph*, align 8
  %5 = alloca %struct.graph_canvas*, align 8
  %6 = alloca %struct.graph_v2*, align 8
  store %struct.graph* %0, %struct.graph** %4, align 8
  store %struct.graph_canvas* %1, %struct.graph_canvas** %5, align 8
  %7 = load %struct.graph*, %struct.graph** %4, align 8
  %8 = getelementptr inbounds %struct.graph, %struct.graph* %7, i32 0, i32 0
  %9 = load %struct.graph_v2*, %struct.graph_v2** %8, align 8
  store %struct.graph_v2* %9, %struct.graph_v2** %6, align 8
  %10 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %11 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.graph*, %struct.graph** %4, align 8
  %17 = call i32 @graph_add_parent(%struct.graph* %16, i32* null)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %43

20:                                               ; preds = %15, %2
  %21 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %22 = call i32 @graph_expand(%struct.graph_v2* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %43

25:                                               ; preds = %20
  %26 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %27 = call i32 @graph_generate_next_row(%struct.graph_v2* %26)
  %28 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %29 = load %struct.graph_canvas*, %struct.graph_canvas** %5, align 8
  %30 = call i32 @graph_generate_symbols(%struct.graph_v2* %28, %struct.graph_canvas* %29)
  %31 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %32 = call i32 @graph_commit_next_row(%struct.graph_v2* %31)
  %33 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %34 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %33, i32 0, i32 0
  store i64 0, i64* %34, align 8
  %35 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %36 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  store i64 0, i64* %37, align 8
  %38 = load %struct.graph_v2*, %struct.graph_v2** %6, align 8
  %39 = call i32 @graph_collapse(%struct.graph_v2* %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %25
  store i32 0, i32* %3, align 4
  br label %43

42:                                               ; preds = %25
  store i32 1, i32* %3, align 4
  br label %43

43:                                               ; preds = %42, %41, %24, %19
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @graph_add_parent(%struct.graph*, i32*) #1

declare dso_local i32 @graph_expand(%struct.graph_v2*) #1

declare dso_local i32 @graph_generate_next_row(%struct.graph_v2*) #1

declare dso_local i32 @graph_generate_symbols(%struct.graph_v2*, %struct.graph_canvas*) #1

declare dso_local i32 @graph_commit_next_row(%struct.graph_v2*) #1

declare dso_local i32 @graph_collapse(%struct.graph_v2*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
